# web-mapper

./: .gitignore  README.md  pyproject.toml
tests/: test_mapper.py  test_patterns.py
web_mapper/: __init__.py
web_mapper/scrapers/: __init__.py  mapper.py  mapper_errors.py  patterns.py
