[tool.poetry]
name = "web-mapper"
version = "0.1.0"
description = "A biblioteca web-mapper serve para listar links em paginas web de forma recursiva."
authors = ["Carlos Eduardo Ferreira Fernandes <carlos@dynatech.tec.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
